<resources>
    <string name="app_name" translatable="true">VRADES</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="true">Hello blank fragment</string>
    <string name="e_mail" translatable="true">E-mail</string>
    <string name="password" translatable="true">Password</string>
    <string name="enter_your_password" translatable="true">Enter your password</string>
    <string name="enter_your_e_mail" translatable="true">Enter your e-mail</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_your_name">Enter your full name</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="full_name">Full name</string>
    <string name="register">Register</string>
    <string name="already_having_an_account">Already having an account?</string>
    <string name="settings_button">Settings button</string>
    <string name="about">About</string>
    <string name="detect_it">Detect it!</string>
    <string name="tutorial">Tutorial</string>
    <string name="my_profile">My Profile</string>
    <string name="logo">Logo</string>
    <string name="back">Back</string>
    <string name="line">Line</string>
    <string name="volume">Volume</string>
    <string name="notifications">Notifications</string>
    <string name="display_suggestions">Display Suggestions</string>

    <string name="log_out">Log out</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="vrades_about_description">VRADES is a project that started as my bachelor thesis. The title is an abbreviation from the thesis title: &quot; Validation of the recognition of automatically detected emotional states &quot;.\n The application is inspired from other emotion detection apps, by combining several emotional test types with new features such as being able to receive advice based on test results and keeping track of your tests.</string>
    <string name="follow_on_insta">Instagram</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book</string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="skip_tutorial">Skip Tutorial</string>
    <string name="complete_the_tutorial_to_get_used_with_our_technologies">Complete the tutorial to get used with our technologies!</string>
    <string name="start">Start</string>
    <string name="press_camera">Press on the &quot;camera &quot; button to take a picture</string>
    <string name="camera" />
    <string name="press_gallery">Now press on the &quot; gallery &quot; button to detect an emotion from your device\'s gallery</string>
    <string name="tutorial_finished">Now you can proceed to the next step!</string>
    <string name="start_recording_audio">Press on the down button to start recording your voice</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularized in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus Page Maker including versions of Lorem Ipsum.</string>
    <string name="tap_to_start">Tap to start</string>
    <string name="writing_info">Now write a short text about what do you expect to gain after using this application (1–40 words)</string>
    <string name="audio_completed">Great job! You are beginning to master it.</string>
    <string name="hint">hint</string>
    <string name="writing_completed">Now you can proceed to the last part of the tutorial!</string>
    <string name="congrats_writing">Congratulations, you wrote enough words!</string>
    <string name="answer_personal_questions">Answer the personal question and then send it by pressing on the following button</string>
    <string name="question_text_item">Q. What kind of activities make you happy most usually?</string>
    <string name="submit_your_answers">Send your answers</string>
    <string name="done">Done!</string>
    <string name="face_inside_camera">Put your face inside the camera\'s area in order to detect any emotions from your face.</string>
    <string name="change_camera">change camera</string>
    <string name="next">Next</string>
    <string name="restart">Restart</string>
    <string name="proceed">Proceed</string>
    <string name="profile">Picture Profile</string>
    <string name="analysis"><![CDATA[Analysis]]></string>
    <string name="test_results">Test Results</string>
    <string name="test">Test -</string>
    <string name="confession">Confession:</string>
    <string name="occupation">Occupation:</string>
    <string name="country">Country:</string>
    <string name="age">Age:</string>
    <string name="face_detection">Face Detection</string>
    <string name="joy">JOY</string>
    <string name="the_boss">Alex Madaras</string>
    <string name="results">Results</string>
    <string name="final_result">Final Result</string>
    <string name="writing_test">Writing Test</string>
    <string name="see_the_details">Details</string>
    <string name="chart_results">Chart Results</string>
    <string name="dominant_emotion">Dominant Emotion:</string>
    <string name="meditate">Meditate</string>
    <string name="_20_min_day">20 min/day</string>
    <string name="review">Review</string>
    <string name="latest_result_content">Latest Result: CONTENT</string>
    <string name="audio_test">Audio Test</string>
    <string name="do_you_agree_to_receive_lifestyle_feedback_generated_by_the_test_completion">Do you agree to receive lifestyle feedback generated after completing the test?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="enter_your_e_mail_and_you_will_receive_a_recovery_code">Enter your e-mail and you will receive a recovery code.</string>
    <string name="submit">Submit</string>
    <string name="start_audio">Start Recording!</string>
    <string name="arrow">arrow</string>
    <string name="_70_words">0 words</string>
    <string name="write_text">Write your text!</string>
    <string name="good_to_go">Now you can start using VRADES!</string>
    <string name="alex_madaras">Alex Madaras</string>

    <string name="you_seem_to_be_satisfied_with_your_own_life_so_you_are_less_tempted_to_change_its_way_yet_by_analyzing_each_of_the_results_we_found_a_lack_of_stability_as_you_tend_to_change_your_mind_easily">You seem to be satisfied with your own life, so you are less tempted to change its way. Yet, by analyzing each of the results, we found a lack of stability, as you tend to change your mind easily.</string>
    <string name="image">image</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="guest">Guest</string>
    <string name="go_detect_it">Start detecting!</string>
    <string name="retrieving_data">Retrieving data...</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
</resources>