<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llModal"
    android:layout_width="match_parent"
    android:paddingBottom="8dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="16dp"
    android:background="@drawable/container_form">

    <ImageView
        android:id="@+id/ivLogoModal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPermissionQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:text="@string/do_you_agree_to_receive_lifestyle_feedback_generated_by_the_test_completion"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoModal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnYes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:text="@string/yes"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/gdlHalve"
        app:layout_constraintTop_toTopOf="@+id/btnNo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:text="@string/no"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/gdlHalve"
        app:layout_constraintTop_toBottomOf="@+id/tvPermissionQuestion" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdlHalve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="891dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>